--- a/Client/electricity/src/App.css
+++ b/Client/electricity/src/App.css
@@ -1,38 +1,43 @@
-.App {
+form{
+  margin-top: 20em;
+}
+
+.error{
+  margin-bottom: 10px;
+  color: red;
+}
+
+input[type="email"],input[type="password"]{
+  margin-bottom: 20px;
+}
+input[type="text"]{
+  margin-bottom: 20px;
+}
+
+
+input[type="submit"]{
+
+  margin-top: 40px;
+}
+
+input[type="file"]{
+  margin-bottom: 20px;
+}
+
+
+.logout{
+  color: white;
+  background-color: rgb(204, 93, 93);
+  border: none;
+  border-radius: 5px;
+  margin-left: 40em;
+  margin-top: 20px;
+  padding: 5px;
+  width: 100px;
+}
+.dash{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p.dash{
+  font-size:25px
 }
